--- a/templates/about.html
+++ b/templates/about.html
@@ -1,1 +1,5 @@
-<h1>about</h1>
+<!-- templates/about.html -->
+{% extends 'base.html' %}
+{% block content %}
+<h1>About page</h1>
+{% endblock content %}
